feat: fix message

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 
                 // Dummy extracted message
                 const extractedMessage = document.getElementById('extractedMessage');
-                extractedMessage.textContent = response;
+                extractedMessage.textContent = response.message;
 
                 showResult('decode');
 
