feat: add console

--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@
 
                 // Dummy extracted message
                 const extractedMessage = document.getElementById('extractedMessage');
+                console.log(response)
                 extractedMessage.textContent = response.message;
 
                 showResult('decode');
